--- a/packages/create-yew-app/package.json
+++ b/packages/create-yew-app/package.json
@@ -1,10 +1,13 @@
 {
   "name": "@thamognya/create-yew-app",
-  "version": "0.0.2",
+  "version": "0.0.3",
   "description": "Create yew app with tailwind css and sass",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "bin": {
+    "create-yew-app": "./index.js"
   },
   "repository": {
     "type": "git",
